# GamblingMachine

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  run_me.sh
src/: GamblingMachine.cpp  GamblingMachine.h  main.cpp  main_client.cpp  main_server.cpp  random.h
